# elden-ring-qwop

./: Cargo.toml  LICENSE.txt  README.md  erop.me3  rust-toolchain.toml
mod/: project.json  regulation.bin.prev
mod/action/script/: c0000.hks
mod/msg/engus/: menu_dlc02.msgbnd.dcx
src/: controls.rs  initialize_default_controls.rs  input_state.rs  keybindings.rs  lib.rs  messages.rs  param.rs  physics.rs  player_ins_skeleton_ext.rs  qwop.rs  qwop_control.rs  qwop_mod.rs  qwop_physics.rs  rvas.rs  skeleton_sync.rs  test.rs
src/input_state/: keybindings.rs  mod.rs
src/physics/: constants.rs  helpers.rs  mod.rs
