[package]
name = "erop"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1

[dependencies]
eldenring = { git = "https://github.com/ThomasJClark/fromsoftware-rs.git", rev = "9abf1e24e5" }
fromsoftware-shared = { git = "https://github.com/ThomasJClark/fromsoftware-rs.git", rev = "9abf1e24e5" }
glam = "0.32.1"
pelite = "0.10.0"
phf = { version = "0.13.1", features = ["macros"] }
retour = { version = "0.3.1", features = ["static-detour"] }
windows = { version = "0.62.2", features = [
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }
wrapped2d = { git = "https://github.com/ThomasJClark/rust_box2d.git", rev = "59794f5" }
